--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -51,10 +51,10 @@
         <!-- Navigation -->
         <nav class="navigation">
             <ul class="nav-menu">
-                <li><a href="/index (1).html" class="nav-link ">Home</a></li>
+                <li><a href="index.html" class="nav-link ">Home</a></li>
                 <li><a href="#" class="nav-link">Inventory</a></li>
-                <li><a href="/apply-online.html" class="nav-link">Apply Online</a></li>
-                <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+                <li><a href="apply-online.html" class="nav-link">Apply Online</a></li>
+                <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
             </ul>
         </nav>
     </header>
